several dark mode fixes in the sidebar

--- a/templates/default/fulldoc/html/css/common.css
+++ b/templates/default/fulldoc/html/css/common.css
@@ -34,6 +34,10 @@ a {
     text-decoration: none;
 }
 
+ol, p, ul {
+    line-height: 1.7;
+}
+
 a.header-anchor {
     font-size: .85em;
     float: left;
