--- a/templates/default/fulldoc/html/css/navbar.css
+++ b/templates/default/fulldoc/html/css/navbar.css
@@ -84,6 +84,16 @@
         background: #333 url('data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHhtbG5z PSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgd2lkdGg9IjEyIiBoZWlnaHQ9 IjEzIj48ZyBzdHJva2Utd2lkdGg9IjIiIHN0cm9rZT0iI2FhYSIgZmlsbD0ibm9u ZSI+PHBhdGggZD0iTTExLjI5IDExLjcxbC00LTQiLz48Y2lyY2xlIGN4PSI1IiBj eT0iNSIgcj0iNCIvPjwvZz48L3N2Zz4K') .6rem .5rem no-repeat!important;
         color: #ddd;
     }
+
+    .version-switcher .version-button {
+        border: 1px solid #a6a6a6!important;
+        color: #a6a6a6!important;
+    }
+
+    .version-switcher .version-button.current {
+        background: #a6a6a6!important;
+        color: #fff!important;
+    }
 }
 
 .navbar:not(.headroom--top):not(.transparent) {
