--- a/templates/default/fulldoc/html/css/sidebar.css
+++ b/templates/default/fulldoc/html/css/sidebar.css
@@ -14,6 +14,10 @@
     overflow-x: scroll;
 }
 
+.archived-versions .nav-dropdown a {
+    color: #2c3e50;
+}
+
 @media (min-width: 860px) {
     .sidebar {
         top: 4.11429rem!important;
@@ -40,14 +44,36 @@
     }
 }
 
+.sidebar-heading a {
+    color: #2c3e50;
+    font-weight: 700;
+}
+
 @media (prefers-color-scheme: dark) {
     .sidebar {
         background-color: #000!important;
         border-right: 1px solid #444!important;
     }
 
+    .sidebar-heading a {
+        color: #ddd;
+    }
+
     .sidebar .sidebar-heading, .sidebar .sidebar-link {
         color: #a6a6a6;
+    }
+
+    .dropdown-wrapper .nav-dropdown {
+        background-color: rgba(0,0,0,.9)!important;
+        border-color: #444!important;
+    }
+
+    .dropdown-item, .dropdown-wrapper .arrow, .dropdown-wrapper .title, .nav-item a, .nav-link {
+        color: #ddd!important;
+    }
+
+    .archived-versions .nav-dropdown a {
+        color: #a6a6a6!important;
     }
 }
 
@@ -289,10 +315,6 @@ span.sidebar-link.active a {
 
 .dropdown-wrapper .nav-dropdown .dropdown-item a:hover {
     color: #f60;
-}
-
-.archived-versions .nav-dropdown a {
-    color: #2c3e50!important;
 }
 
 .collapsed > ul {
